--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <header>
-    <nav id="div-nav">
-        <ul id="left-nav">
+    <nav class="div-nav">
+        <ul class="left-nav">
             <li><a href="#">About</a></li>
             <li><a href="#">Store</a></li>
         </ul>
-        <ul id="right-nav" >
+        <ul class="right-nav" >
             <li><a href="#">Gmail</a></li>
             <li><a href="#">Images</a></li>
-            <svg class="dots" focusable="false" viewBox="0 0 33 20"><a href="#"><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path></a></svg>
+            <img class="dots" src="images/google-apps.png"></img>
             <button id="btn-signin">Sign in</button>
         </ul>
     </nav>
@@ -22,11 +22,35 @@
 <body>
 <main class="main">
     <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
-
+    <div id="search-bar">
+        <section>
+    <form>
+        <input type=text id="searchbar" autofocus>
+            <div class="search-buttons">
+                <button class="btnsearch">Google Search</button>
+                <button class="btnsearch">I'm Feeling Lucky</button>
+        </div>
+    </form>
+</section>
+    </div>
 </main>    
 </body>
 <footer>
-
+        <h2>Australia</h2>
+        <div class="div-nav">
+        <ul class="left-nav foot-list">
+            <li><a href="#">Advertising</a></li>
+            <li><a href="#">Business</a></li>
+            <li><a href="#">How Search works</a></li>
+        </ul>
+    </div>
+    <div class="div-nav">
+        <ul class="right-nav foot-list">
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Settings</a></li>
+        </ul>
+    </div>
 </footer>
 
 </html>
