Added new html page for a replica of a search page for Apples.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <form>
         <input type=text id="searchbar" autofocus>
             <div class="search-buttons">
-                <button class="btnsearch">Google Search</button>
-                <button class="btnsearch">I'm Feeling Lucky</button>
+                <button class="btnsearch" ><a href="search.html">Google Search</a></button>
+                <button class="btnsearch"><a href="search.html">I'm Feeling Lucky</a></button>
         </div>
     </form>
 </section>
