Added ID to search page.

--- a/search.html
+++ b/search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="searchPage">
     <head>
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -19,8 +19,10 @@
         </nav>
     </header>
     <body>
-
+        
     </body>
+
+    
 
     <footer>
         <h2>Australia</h2>
