Removed autofocus on searchbar.

--- a/search.html
+++ b/search.html
@@ -7,7 +7,7 @@
     <header>
         <nav class="search-nav">
             <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
-            <input type=text id="searchbar" autofocus>
+            <input type=text id="searchbar">
             <!-- Add Magnifying Glass-->
             <ul class="right-nav">
                 <img class="dots" src="images/google-apps.png"></img>
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <body>
-        
+
     </body>
 
     
