Added family info of apples, and some links for the first result.

--- a/search.html
+++ b/search.html
@@ -42,6 +42,16 @@
             </div>
             <h3>Apple - Wikipedia</h3>
             <p>An apple is a sweet edible fruit produced by an <strong>apple</strong> tree (Malus domestica). Apple trees are cultivvated worldwide and are the most widely grown species in the ...</p>
+            <div id="family-info">
+                <p><strong>Family:</strong> Rosaceae</p>
+                <p><strong>Genus:</strong> Malus</p>
+                <p><strong>Species:</strong> M.domestica</p>
+                <p><strong>Kingdom:</strong> Plantae</p>
+            </div>
+
+            <div class="add-links">
+                <p><a href="#">List of apple cultivars · Apple Inc. · ‎Redlove apples · ‎Welsh apples - Wikipedia</a></p>
+            </div>
         </section>
 
         <section id="description">
