Updated dummy result returns for apples.

--- a/search.html
+++ b/search.html
@@ -35,6 +35,7 @@
         <section id="resultnum">
             <p>About 5,490,000,000 results (0.98 seconds)</p>
         </section>
+        <div class="all-results"
         <section class="results">
             <div class="link-div">
             <h4>en.wikipedia.com > wiki > Apple</h4>
@@ -53,11 +54,134 @@
                 <p><a href="#">List of apple cultivars · Apple Inc. · ‎Redlove apples · ‎Welsh apples - Wikipedia</a></p>
             </div>
         </section>
+        <section class="results">
+            <div class="link-div">
+            <h4 class="not-first">www.apple.com > ...</h4>
+            <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
+            </div>
+            <h3>Apple (Australia)</h3>
+            <p>Discover the innovative world of <strong>Apple</strong> and shop for everything iPhone, iPad, <strong>Apple</strong> Watch, Mac and <strong>Apple</strong> TV. Plus explore accessories, entertainment and ...</p>
 
+            <div class="add-links">
+                <p><a href="#">iPhone · ‎Mac · ‎iPad · ‎Support</a></p>
+            </div>
+        </section>
+        <section class="results">
+            <div class="link-div">
+            <h4 class="not-first">www.aussieapples.com.au</h4>
+            <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
+            </div>
+            <h3>Aussie Apples – Get your crunch on!</h3>
+            <p>A dense, sweet, aromatic and juicy apple with a white flesh. ... In Australia you can buy crisp and tasty apples all year around because of how apples are stored.</p>
+        </section>
+        <section class="results">
+            <div class="link-div">
+            <h4 class="not-first">www.medicalnewstoday.com › articles</h4>
+            <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
+            </div>
+            <h3>Apples: Benefits, nutrition, and tips - Medical News Today</h3>
+            <p>Dec 18, 2019 - Apples are a popular fruit, containing antioxidants, vitamins, dietary fiber, and a range of other nutrients. Due to their varied nutrient content, they may help prevent several health conditions. ... For example, they may help reduce the risk of cancer, obesity, heart disease ...</p>
+            <div class="add-links">
+                <p><a href="#">Pears · ‎What are the top healthful foods? · ‎Are apple seeds poisonous?</a></p>
+            </div>
+        </section>
+        <section class="results">
+            <div class="link-div">
+            <h4 class="not-first">www.apple.com > ...</h4>
+            <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
+            </div>
+            <h3>Apple (Australia)</h3>
+            <p>Discover the innovative world of <strong>Apple</strong>> and shop for everything iPhone, iPad, Apple Watch, Mac and Apple TV. Plus explore accessories, entertainment and ...</p>
+            <div id="family-info">
+                <p><strong>Family:</strong> Rosaceae</p>
+                <p><strong>Genus:</strong> Malus</p>
+                <p><strong>Species:</strong> M.domestica</p>
+                <p><strong>Kingdom:</strong> Plantae</p>
+            </div>
+
+            <div class="add-links">
+                <p><a href="#">List of apple cultivars · Apple Inc. · ‎Redlove apples · ‎Welsh apples - Wikipedia</a></p>
+            </div>
+        </section>
+        <section class="results">
+            <div class="link-div">
+            <h4 class="not-first">www.apple.com > ...</h4>
+            <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
+            </div>
+            <h3>Apple (Australia)</h3>
+            <p>Discover the innovative world of <strong>Apple</strong>> and shop for everything iPhone, iPad, Apple Watch, Mac and Apple TV. Plus explore accessories, entertainment and ...</p>
+            <div id="family-info">
+                <p><strong>Family:</strong> Rosaceae</p>
+                <p><strong>Genus:</strong> Malus</p>
+                <p><strong>Species:</strong> M.domestica</p>
+                <p><strong>Kingdom:</strong> Plantae</p>
+            </div>
+
+            <div class="add-links">
+                <p><a href="#">List of apple cultivars · Apple Inc. · ‎Redlove apples · ‎Welsh apples - Wikipedia</a></p>
+            </div>
+        </section>
+        <section class="results">
+            <div class="link-div">
+            <h4 class="not-first">www.apple.com > ...</h4>
+            <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
+            </div>
+            <h3>Apple (Australia)</h3>
+            <p>Discover the innovative world of <strong>Apple</strong>> and shop for everything iPhone, iPad, Apple Watch, Mac and Apple TV. Plus explore accessories, entertainment and ...</p>
+            <div id="family-info">
+                <p><strong>Family:</strong> Rosaceae</p>
+                <p><strong>Genus:</strong> Malus</p>
+                <p><strong>Species:</strong> M.domestica</p>
+                <p><strong>Kingdom:</strong> Plantae</p>
+            </div>
+
+            <div class="add-links">
+                <p><a href="#">List of apple cultivars · Apple Inc. · ‎Redlove apples · ‎Welsh apples - Wikipedia</a></p>
+            </div>
+        </section>
+        <section class="results">
+            <div class="link-div">
+            <h4 class="not-first">www.apple.com > ...</h4>
+            <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
+            </div>
+            <h3>Apple (Australia)</h3>
+            <p>Discover the innovative world of <strong>Apple</strong>> and shop for everything iPhone, iPad, Apple Watch, Mac and Apple TV. Plus explore accessories, entertainment and ...</p>
+            <div id="family-info">
+                <p><strong>Family:</strong> Rosaceae</p>
+                <p><strong>Genus:</strong> Malus</p>
+                <p><strong>Species:</strong> M.domestica</p>
+                <p><strong>Kingdom:</strong> Plantae</p>
+            </div>
+
+            <div class="add-links">
+                <p><a href="#">List of apple cultivars · Apple Inc. · ‎Redlove apples · ‎Welsh apples - Wikipedia</a></p>
+            </div>
+        </section>
+        <section class="results">
+            <div class="link-div">
+            <h4 class="not-first">www.apple.com > ...</h4>
+            <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
+            </div>
+            <h3>Apple (Australia)</h3>
+            <p>Discover the innovative world of <strong>Apple</strong>> and shop for everything iPhone, iPad, Apple Watch, Mac and Apple TV. Plus explore accessories, entertainment and ...</p>
+            <div id="family-info">
+                <p><strong>Family:</strong> Rosaceae</p>
+                <p><strong>Genus:</strong> Malus</p>
+                <p><strong>Species:</strong> M.domestica</p>
+                <p><strong>Kingdom:</strong> Plantae</p>
+            </div>
+
+            <div class="add-links">
+                <p><a href="#">List of apple cultivars · Apple Inc. · ‎Redlove apples · ‎Welsh apples - Wikipedia</a></p>
+            </div>
+        </section>
+        </div>
         <section id="description">
             <div id="imagebox">
                 <div id="bigApple">
                     <img src="images/big-apple.jpeg">
+                    <h1>Apple</h1>
+                    <h5>Fruit</h5>
                 </div>
                 <div id="smallApple">
                     <img src="images/apple1.jpeg">
@@ -66,13 +190,12 @@
                     <img src="images/apple4.jpeg">
                     <img src="images/apple5.jpeg">
                     <img src="images/apple6.jpeg">
-                </div>
-                <h1>Apple</h1>
-                <h5>Fruit</h5>  
+                </div> 
             </div>
             <section>
-                <p>An apple is a sweet, edible fruit produced by an apple tree. Apple trees are cultivated worldwide and are the most widely grown species in the genus Malus. The tree originated in Central Asia, where its wild ancestor, Malus sieversii, is still found today.</p>
-                <p><a href="#">Wikipedia</a></p>
+                <p class="apple-text">An apple is a sweet, edible fruit produced by an apple tree. Apple trees are cultivated worldwide and are the most widely grown species in the genus Malus. The tree originated in Central Asia, where its wild ancestor, Malus sieversii, is still found today.</p>
+                <p class="apple-text add-links"><a href="#">Wikipedia</a></p>
+                <p id="science-text" class="apple-text"><strong>Scientific name: </strong>Malus domestica</p>
             </section>
         </section>
     </body>
