Updated dummy results to reflect an actual google search

--- a/search.html
+++ b/search.html
@@ -87,94 +87,55 @@
         </section>
         <section class="results">
             <div class="link-div">
-            <h4 class="not-first">www.apple.com > ...</h4>
+            <h4 class="not-first">www.aussieapples.com.au › varieties</h4>
             <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
             </div>
-            <h3>Apple (Australia)</h3>
-            <p>Discover the innovative world of <strong>Apple</strong>> and shop for everything iPhone, iPad, Apple Watch, Mac and Apple TV. Plus explore accessories, entertainment and ...</p>
-            <div id="family-info">
-                <p><strong>Family:</strong> Rosaceae</p>
-                <p><strong>Genus:</strong> Malus</p>
-                <p><strong>Species:</strong> M.domestica</p>
-                <p><strong>Kingdom:</strong> Plantae</p>
+            <h3>Varieties – Aussie Apples</h3>
+            <p>Smitten®. An early season apple with a perfect crunch. Its firm flesh makes it more resistant to bruising. A great snack on-the-go.</p>
+        </section>
+        <section class="results">
+            <div class="link-div">
+            <h4 class="not-first">en.wikipedia.org › wiki › Apple_Inc</h4>
+            <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
             </div>
-
-            <div class="add-links">
-                <p><a href="#">List of apple cultivars · Apple Inc. · ‎Redlove apples · ‎Welsh apples - Wikipedia</a></p>
+            <h3>Apple Inc. - Wikipedia</h3>
+            <p>Apple Inc. is an American multinational technology company headquartered in Cupertino, California, that designs, develops, and sells consumer electronics, ...</p>
+            <div id="family-info">
+                <p><strong>Founders:</strong> <a href="#">Steve Jobs; Steve Wozniak; Ronald ...</a></p>
+                <p><strong>Number of employees:</strong> 137,000 (2019)</p>
+                <p><strong>Founded:</strong> ‎April 1, 1976; 43 years ago</p>
+                <p><strong>Number of locations:</strong> ‎500+ retail stores (2019)</p>
             </div>
         </section>
         <section class="results">
             <div class="link-div">
-            <h4 class="not-first">www.apple.com > ...</h4>
+            <h4 class="not-first">www.zdnet.com › article › i-just-dumped-one-of-apples-worst-most-b...</h4>
             <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
             </div>
-            <h3>Apple (Australia)</h3>
-            <p>Discover the innovative world of <strong>Apple</strong>> and shop for everything iPhone, iPad, Apple Watch, Mac and Apple TV. Plus explore accessories, entertainment and ...</p>
-            <div id="family-info">
-                <p><strong>Family:</strong> Rosaceae</p>
-                <p><strong>Genus:</strong> Malus</p>
-                <p><strong>Species:</strong> M.domestica</p>
-                <p><strong>Kingdom:</strong> Plantae</p>
-            </div>
+            <h3>I just dumped one of Apple's worst, most beautiful products ...</h3>
+            <p>1 day ago - It all must have seemed like a good idea at the time. But the departure of the business chief responsible for Apple News Plus suggests I was not ...</p>
+        </section>
 
-            <div class="add-links">
-                <p><a href="#">List of apple cultivars · Apple Inc. · ‎Redlove apples · ‎Welsh apples - Wikipedia</a></p>
+        <section class="results">
+            <div class="link-div">
+            <h4 class="not-first">blog.hellofresh.com.au › How to cook › seasonally</h4>
+            <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
             </div>
+            <h3>A Guide to Apples; cooking, baking and snacking approved</h3>
+            <p>Some like to think of apples as fruits, but we prefer thinking of them as nature's lollies — the kind you can enjoy without an ounce of guilt. Now that's our kind of ...</p>
         </section>
         <section class="results">
             <div class="link-div">
-            <h4 class="not-first">www.apple.com > ...</h4>
+            <h4 class="not-first">www.thefoodcoach.com.au › food</h4>
             <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
             </div>
-            <h3>Apple (Australia)</h3>
-            <p>Discover the innovative world of <strong>Apple</strong>> and shop for everything iPhone, iPad, Apple Watch, Mac and Apple TV. Plus explore accessories, entertainment and ...</p>
-            <div id="family-info">
-                <p><strong>Family:</strong> Rosaceae</p>
-                <p><strong>Genus:</strong> Malus</p>
-                <p><strong>Species:</strong> M.domestica</p>
-                <p><strong>Kingdom:</strong> Plantae</p>
-            </div>
-
-            <div class="add-links">
-                <p><a href="#">List of apple cultivars · Apple Inc. · ‎Redlove apples · ‎Welsh apples - Wikipedia</a></p>
-            </div>
+            <h3>Apples - The Food Coach</h3>
+            <p>Apples - Did you know the way to test the goodness of an apple is to flick it with your fingernail? If it makes a sound similar to flicking a drum the apple will be ...</p>
         </section>
-        <section class="results">
-            <div class="link-div">
-            <h4 class="not-first">www.apple.com > ...</h4>
-            <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
-            </div>
-            <h3>Apple (Australia)</h3>
-            <p>Discover the innovative world of <strong>Apple</strong>> and shop for everything iPhone, iPad, Apple Watch, Mac and Apple TV. Plus explore accessories, entertainment and ...</p>
-            <div id="family-info">
-                <p><strong>Family:</strong> Rosaceae</p>
-                <p><strong>Genus:</strong> Malus</p>
-                <p><strong>Species:</strong> M.domestica</p>
-                <p><strong>Kingdom:</strong> Plantae</p>
-            </div>
+        <h2>Searches related to Apples</h2>
+        <div id="grid-related">
 
-            <div class="add-links">
-                <p><a href="#">List of apple cultivars · Apple Inc. · ‎Redlove apples · ‎Welsh apples - Wikipedia</a></p>
-            </div>
-        </section>
-        <section class="results">
-            <div class="link-div">
-            <h4 class="not-first">www.apple.com > ...</h4>
-            <img class="dropdown-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Black_triangle.svg/2000px-Black_triangle.svg.png">
-            </div>
-            <h3>Apple (Australia)</h3>
-            <p>Discover the innovative world of <strong>Apple</strong>> and shop for everything iPhone, iPad, Apple Watch, Mac and Apple TV. Plus explore accessories, entertainment and ...</p>
-            <div id="family-info">
-                <p><strong>Family:</strong> Rosaceae</p>
-                <p><strong>Genus:</strong> Malus</p>
-                <p><strong>Species:</strong> M.domestica</p>
-                <p><strong>Kingdom:</strong> Plantae</p>
-            </div>
-
-            <div class="add-links">
-                <p><a href="#">List of apple cultivars · Apple Inc. · ‎Redlove apples · ‎Welsh apples - Wikipedia</a></p>
-            </div>
-        </section>
+        </div>
         </div>
         <section id="description">
             <div id="imagebox">
