Added Searches Related Grid.

--- a/search.html
+++ b/search.html
@@ -134,7 +134,14 @@
         </section>
         <h2>Searches related to Apples</h2>
         <div id="grid-related">
-
+            <p><a href="#"><strong>benefit of</strong> apples</a></p>
+            <p><a href="#"><strong>red</strong> apples</a></p>
+            <p><a href="#"><strong>aussie</strong> apples</a></p>
+            <p><a href="#"><strong>victorian</strong> apples</a></p>
+            <p><a href="#">apples <strong>types</strong></a></p>
+            <p><a href="#">apples<strong> clipart</strong></a></p>
+            <p><a href="#"><strong>apple store</strong></a></p>
+            <p><a href="#"><strong>johnathan</strong> apples</a></p>
         </div>
         </div>
         <section id="description">
