Updated footer for the search page.

--- a/search.html
+++ b/search.html
@@ -171,15 +171,17 @@
     
 
     <footer>
-        <h2>Australia</h2>
-        <!--Image here-->
-        <p><strong>7000, Hobart TAS</strong> - From your internet address - <a href="#">Use precise location</a><a href="#"> - Learn more</a></p>
-        <div class="div-nav">
-        <ul class="left-nav foot-list">
-            <li><a href="#">Help</a></li>
-            <li><a href="#">Send feedback</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms</a></li>
-        </ul>
+        <div id=Location-foot>
+            <h2>Australia</h2>
+            <!--Image here-->
+            <p><strong>7000, Hobart TAS</strong> - From your internet address - <a href="#">Use precise location</a><a href="#"> - Learn more</a></p>
+            <div class="div-nav">
+                <ul class="foot-list">
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Send feedback</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
+                </ul>
+        </div>
 </footer>
 </html>
