Added page navigation, few issues here.

--- a/search.html
+++ b/search.html
@@ -143,6 +143,24 @@
             <p><a href="#"><strong>apple store</strong></a></p>
             <p><a href="#"><strong>johnathan</strong> apples</a></p>
         </div>
+        <div id="navigation">
+            <table>
+                <tbody>
+                <td class="g-image"></td>
+                <td class="o-page"><p>1</p></td>
+                <td class="o-image"><a href="#">2</a></td>
+                <td class="o-image"><a href="#">3</a></td>
+                <td class="o-image"><a href="#">4</a></td>
+                <td class="o-image"><a href="#">5</a></td>
+                <td class="o-image"><a href="#">6</a></td>
+                <td class="o-image"><a href="#">7</a></td>
+                <td class="o-image"><a href="#">8</a></td>
+                <td class="o-image"><a href="#">9</a></td>
+                <td class="o-image"><a href="#">10</a></td>
+                <td class="next-image"><a href="#">Next</a></td>
+            </tbody>
+            </table>
+        </div>
         </div>
         <section id="description">
             <div id="imagebox">
