Fixed issues with webp urls, added link to index.html via google logo

--- a/search.html
+++ b/search.html
@@ -4,11 +4,12 @@
     <head>
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <meta charset="UTF-8">
     </head>
     <header>
         <nav class="search-nav">
             <div>
-            <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
+            <a href="index.html"><img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo"></a>
             <input type=text id="searchbar">
             <!-- Add Magnifying Glass-->
             <ul class="right-nav">
